# goodlinks-to-instapaper

./: README.md  com.elidickinson.goodlinks-instapaper.plist  com.elidickinson.goodlinks2insta.plist  com.esd.goodlinks-instapaper.plist  com.sidget.goodlinks2insta.plist  goodlinks2insta.py  pyproject.toml  sync.py
.claude/: settings.local.json
